Update store description and images

--- a/Resources/store/en.html
+++ b/Resources/store/en.html
@@ -1,15 +1,13 @@
-<!--
-TODO: Replace "[Placeholder]"
---><p>
-    [Description]
+<p>
+    This plugin inserts a search input above the filter options. It is visible if the configured value is bigger than the count of the filter options.
 </p>
 
 <p>
-    <a href="https://github.com/FriendsOfShopware/[PluginName]" target="_blank"><img src="https://img.shields.io/badge/Github-[PluginName]-green.svg"></a>
+    <a href="https://github.com/FriendsOfShopware/FroshFilterSearch" target="_blank"><img src="https://img.shields.io/badge/Github-FroshFilterSearch-green.svg"></a>
     This plugin is part of <a href="https://store.shopware.com/en/friends-of-shopware.html" target="_blank">@FriendsOfShopware</a>.
-    Maintainer from the plugin is: <a href="https://github.com/[Contributor]" target="_blank">[Contributor Name]</a>
+    Maintainer from the plugin is: <a href="https://github.com/eemzet" target="_blank">Alexander Wolf</a>
 </p>
 
 <p>
-    For questions or bugs please create a <a href="https://github.com/FriendsOfShopware/[PluginName]/issues/new" target="_blank">Github Issue</a>
+    For questions or bugs please create a <a href="https://github.com/FriendsOfShopware/FroshFilterSearch/issues/new" target="_blank">Github Issue</a>
 </p>
