--- a/Resources/store/de.html
+++ b/Resources/store/de.html
@@ -1,13 +1,11 @@
-<!--
-TODO: Replace "[Placeholder]"
---><p>
-    [Beschreibung]
+<p>
+    Das Plugin fügt ein Suchfeld über die Filter Optionen ein. Damit können die Optionen gefiltert werden. Das Suchfeld wird erst aktiviert, sobald die Anzahl der Optionen den konfigurierten Wert überschreitet. 
 </p>
 
 <p>
-    <a href="https://github.com/FriendsOfShopware/[PluginName]" target="_blank"><img src="https://img.shields.io/badge/Github-[PluginName]-green.svg"></a>
+    <a href="https://github.com/FriendsOfShopware/FroshFilterSearch" target="_blank"><img src="https://img.shields.io/badge/Github-FroshFilterSearch-green.svg"></a>
     Dieses Plugin wird von <a href="https://store.shopware.com/friends-of-shopware.html" target="_blank">@FriendsOfShopware</a> entwickelt.
-    Maintainer dieses Plugins ist: <a href="https://github.com/[Contributor]" target="_blank">[Contributor Name]</a>
+    Maintainer dieses Plugins ist: <a href="https://github.com/eemzet" target="_blank">Alexander Wolf</a>
 </p>
 
 <p>
